--- a/cdn/sass/main.sass
+++ b/cdn/sass/main.sass
@@ -172,7 +172,7 @@ body
                             margin-left: 10px
                             margin-bottom: 10px
                             color: $colorSe
-                    & p.usage
+                    & p.description
                         font-size: 16px
                         font-weight: 400
                         color: $colorSe
